# Fake-Naira-Detection-

./: .gitignore  README.md  app.py  chapter_3_rbs.py  pyproject.toml
notebooks/: Chapter_3_RBS.ipynb
src/: app.py
