[project]
name = "fake-naira-detection"
version = "0.1.0"
description = "Streamlit app for detecting fake vs genuine Naira notes"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
	"streamlit>=1.36.0",
	"tensorflow>=2.16.1",
	"opencv-python>=4.10.0.84",
	"pillow>=10.4.0",
	"numpy>=1.26.4,<2.1",
]

[tool.uv]
package = false
